fix: set menu trigger button box to exact 64px circle so the center circle aligns dead-center on 50% X-axis with FILTER WORK label

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -98,8 +98,8 @@
 
 .curved-menu-btn {
   position: relative;
-  width: 130px;
-  height: 130px;
+  width: 64px;
+  height: 64px;
   border-radius: 50%;
   background: transparent;
   border: none;
@@ -127,10 +127,11 @@
 /* SVG Curved Text on Right Arc */
 .side-curved-svg {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 130px;
+  height: 130px;
   pointer-events: none;
   z-index: 3;
 }
